07052013 -> jonnyboy -> updated schema for missing patches
07042013 -> kevin    -> Update the FAQ.
07042013 -> devmem   -> Reverted changes in categorisation and added HD movie check to a.b.movee
						Altered ordering of if() in namefixer to improve efficiency
07042013 -> jonnyboy -> removed nntp lib from pp python script
						cymysql has been updated to use sockets, python scripts also, you will need to:
						run sudo pip install --upgrade cymysql -or-
						run sudo easy_install --upgrade cymysql
						run sudo pip-3.2 install --upgrade cymysql
						run sudo pip-3.3 install --upgrade cymysql
						add define('DB_SOCKET', '/var/run/mysqld/mysqld.sock'); to you www/config.php
						be sure the path is correct
07032013 -> jonnyboy -> fixed imported nzbs not pp
						fixed usefilename to use filename instead of clean name
						fixed bug in omport threadd when path has no subfolders
						fixed bug in import true
						added patch to update for new setting
						added option to use filenames with nzb-import - tmux
						added option to use alternate nntp provider for grabnzbs
						updated python nnpt lib
						added new connection, if error
						removed if connected when definately not connected
07022013 -> jonnyboy -> added small delay around python connection
						removed nntp connect where not needed, removed delay between doQuit and doConnect
						added a small delay between doQuit and doConnect, in a attempt to allow the connection to terminate before trying a new connection.
07012013 -> jonnyboy -> added variable timeout to nntp.php
06302013 -> jonnyboy -> changed nzb retention for GrabNZBs to partretentionhours
						added script to show sleeptime using Consoletools
						added dateadded column to nzbs table, added code to delete incomplete nzbs older than 4 hours
						added nzbs to monitor, total(distinct), pending
						started adding code to install scripts for socket and alternate nntp
06292013 -> ugo		 -> added language flags to movie page