@@ -10,6 +10,7 @@
 07042013 -> devmem   -> Reverted changes in categorisation and added HD movie check to a.b.movee
 						Altered ordering of if() in namefixer to improve efficiency
 07042013 -> jonnyboy -> removed nntp lib from pp python script
+						removed optimize and patchdb from tmux scripts
 						cymysql has been updated to use sockets, python scripts also, you will need to:
 						run sudo pip install --upgrade cymysql -or-
 						run sudo easy_install --upgrade cymysql
